--- a/app/src/main/res/layout/app_bar_new_box.xml
+++ b/app/src/main/res/layout/app_bar_new_box.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ShowItemsActivity">
+        tools:context=".AddBoxActivity">
 
     <android.support.design.widget.AppBarLayout
             android:layout_height="wrap_content"
@@ -20,7 +20,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_show_items" />
+    <include layout="@layout/content_new_box" />
 
     <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
