--- a/app/src/main/res/drawable/badge_circle.xml
+++ b/app/src/main/res/drawable/badge_circle.xml
@@ -1,13 +1,17 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="oval">
-    <solid
-            android:color="@android:color/holo_red_dark" />
+    <solid android:color="@android:color/holo_red_dark" />
     <stroke
             android:width="1dp"
             android:color="@android:color/white" />
+
+    <size
+            android:width="12dp"
+            android:height="12dp" />
+
     <padding
-            android:left="5dip"
-            android:right="5dip"
+            android:left="12dip"
+            android:right="12dip"
             android:top="5dip"
             android:bottom="5dip" />
 </shape>
