--- a/app/src/main/res/layout/content_new_item.xml
+++ b/app/src/main/res/layout/content_new_item.xml
@@ -6,7 +6,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/app_bar_new_item"
-        tools:context=".AddItemActivity"
+        tools:context=".activities.AddItemActivity"
         android:orientation="vertical"
         android:layout_margin="5dp">
 
