--- a/app/src/main/res/layout/content_show_items.xml
+++ b/app/src/main/res/layout/content_show_items.xml
@@ -6,7 +6,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/app_bar_show_items"
-        tools:context=".ShowItemsActivity">
+        tools:context=".activities.ShowItemsActivity">
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -14,6 +14,7 @@
             android:orientation="vertical">
 
         <TextView
+                android:id="@+id/item_box_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Médicaments"
